[project]
name = "ai-research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
]
